k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-eks
  namespace: petclinic
spec:
  selector:
    matchLabels:
      app: petclinic
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: 256910578059.dkr.ecr.us-east-2.amazonaws.com/petclinic-eks:latest
        ports:
        - containerPort: 80
