k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
  namespace: petclinic-eks
spec:
  selector: 
    app: petclinic-eks
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  # type: LoadBalancer
